bitwarden/network-policy-bitwarden-postgres-restrict-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: bitwarden-postgres-restrict-ingress
  namespace: bitwarden
spec:
  podSelector:
    matchLabels:
      app: bitwarden-postgres
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: bitwarden
          podSelector:
            matchLabels:
              db-client: bitwarden-postgres
      ports:
        - protocol: TCP
          port: 5432
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: bitwarden
          podSelector:
            matchLabels:
              app: bitwarden-postgres-migrate
      ports:
        - protocol: TCP
          port: 5432
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: monitoring
      ports:
        - protocol: TCP
          port: 9187
